--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gloo = "0.11"
 leptos = { version = "0.6.9", features = ["csr", "nightly"] }
+serde = "1.0"
+serde_json = "1.0"
