--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ gloo = "0.11"
 leptos = { version = "0.6.9", features = ["csr", "nightly"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+strum = "0.26"
+strum_macros = "0.26"
