--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+console_error_panic_hook = "0.1.7"
 gloo = "0.11"
 leptos = { version = "0.6.9", features = ["csr", "nightly"] }
 leptos-use = { version = "0.10", features = ["serde"] }
