--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 console_error_panic_hook = "0.1.7"
+chrono = "0.4"
+futures = "0.3"
 gloo = "0.11"
 leptos = { version = "0.6.9", features = ["csr", "nightly"] }
 leptos-use = { version = "0.10", features = ["serde"] }
@@ -14,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strum = "0.26"
 strum_macros = "0.26"
+textwrap = "0.16"
 
 [profile.release]
 # less code to include into binary
