--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,25 +6,34 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+leptos = { version = "0.7", features = ["csr", "nightly"] }
+leptos-use = { version = "0.15", features = ["storage"] }
+codee = { version = "0.2", features = ["json_serde"] }
 console_error_panic_hook = "0.1.7"
 chrono = "0.4"
 futures = "0.3"
 gloo = "0.11"
-leptos = { version = "0.6.9", features = ["csr", "nightly"] }
-leptos-use = { version = "0.10", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strum = "0.26"
 strum_macros = "0.26"
 textwrap = "0.16"
 
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
+wasm-bindgen = "0.2"
+web-sys = "0.3"
+
 [profile.release]
 # less code to include into binary
 panic = 'abort'
+
 # optimization over all codebase ( better optimization, slower build )
 codegen-units = 1
+
 # optimization for size ( more aggressive )
 opt-level = 'z'
+
 # optimization for size
 # opt-level = 's'
 # link time optimization using using whole-program analysis
