--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0"
 strum = "0.26"
 strum_macros = "0.26"
 textwrap = "0.16"
+geo = "0.29.3"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
