Copy openair.txt to default dir

--- a/Trunk.toml
+++ b/Trunk.toml
@@ -1,2 +1,10 @@
 [build]
 minify = "on_release"
+
+[[hooks]]
+stage = "post_build"
+command = "sh"
+command_arguments = [
+  "-c",
+  "mkdir $TRUNK_STAGING_DIR/default; cp data/openair.txt $TRUNK_STAGING_DIR/default",
+]
